--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -20,9 +20,9 @@ jobs:
         username: ${{ secrets.FTP_USERNAME }}
         password: ${{ secrets.FTP_PASSWORD }}
 
-	      # --- PERBAIKAN DI SINI ---
+		security: false
 
-        
+      
         # Pastikan folder tujuan sudah benar (sesuai settingan cPanel Anda)
         server-dir: /public_html/kursus.quizb.my.id/
 
