--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,7 +3,7 @@ name: Deploy Website ke Server
 on:
   push:
     branches:
-      - main  # Pastikan nama branch utama Anda 'main' atau 'master'
+      - main
 
 jobs:
   web-deploy:
@@ -19,12 +19,15 @@ jobs:
         server: ${{ secrets.FTP_SERVER }}
         username: ${{ secrets.FTP_USERNAME }}
         password: ${{ secrets.FTP_PASSWORD }}
-
+        
+        # --- PERBAIKAN DI SINI ---
+        # Tambahkan 'security: false' untuk mengatasi error Control Socket
+        security: false
+        
         # Pastikan folder tujuan sudah benar (sesuai settingan cPanel Anda)
         server-dir: /public_html/kursus.quizb.my.id/
-
+        
         exclude: |
           **/.git*
           **/.github*
           **/README.md
-          **/*.sql
